--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,15 @@
 {
-    "name": "movim/sasl2",
-    "version": "0.1.0",
-    "description": "Abstraction of various SASL mechanism responses. From the Auth_SASL2 Pear package",
-    "keywords": ["sasl2", "authentication", "scram", "auth"],
-    "homepage": "https://github.com/edhelas/sasl2",
+    "name": "fabiang/sasl",
+    "description": "Abstraction of various SASL mechanism responses.",
+    "license": "BSD-2-Clause",
+    "homepage": "https://github.com/fabiang/sasl",
+    "keywords": ["sasl", "authentication", "scram", "auth"],
     "type": "library",
-    "license": "BSD",
     "authors": [
+        {
+            "name": "Fabian Grutschus",
+            "email": "f.grutschus@lubyte.de"
+        },
         {
             "name": "Anish Mistry",
             "email": "amistry@am-productions.biz"
@@ -22,10 +25,18 @@
     ],
     "autoload": {
         "psr-4": {
-            "SASL2\\": "src/SASL2"
+            "Fabiang\\SASL\\": "src/"
         }
     },
     "require": {
         "php": ">=5.3.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~4.4"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
