--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.4"
+        "phpunit/phpunit": "~4.4",
+        "satooshi/php-coveralls": "~0.6"
     },
     "extra": {
         "branch-alias": {
