Disable php_analyszer

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -14,7 +14,7 @@ tools:
     php_hhvm: true
     php_mess_detector: true
     php_pdepend: true
-    php_analyzer: true
+    php_analyzer: false
     sensiolabs_security_checker: true
     php_changetracking: true
     external_code_coverage:
