--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -21,4 +21,9 @@
                 <directory>../src/</directory>
             </whitelist>
         </filter>
+
+        <php>
+            <ini name="error_reporting" value="-1"/>
+            <ini name="date.timezone" value="Europe/Berlin"/>
+        </php>
 </phpunit>
