--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ php:
 
 install:
     - composer install --dev --no-interaction
+    - ./tests/install_ejabberd.sh testuser testpass
 
 script:
     - ./vendor/bin/phpunit -c tests --coverage-clover=build/logs/clover.xml
