--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ install:
     - composer install --dev --no-interaction
     - sudo ./tests/install_ejabberd.sh testuser testpass
 
+before_script:
+    - cat behat.yml.dist | sed "s/precise32/$HOSTNAME/" > behat.yml
+
 script:
     - ./vendor/bin/phpunit -c tests --coverage-clover=build/logs/clover.xml
 
