--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,14 @@
             "Fabiang\\Sasl\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Fabiang\\Sasl\\Behat\\": "tests/features/bootstrap"
+        }
+    },
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "behat/behat": "~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.4",
