Skip integration test if server doesnt support authentication method

--- a/tests/behat.yml.dist
+++ b/tests/behat.yml.dist
@@ -9,3 +9,5 @@ default:
                     - precise32
                     - testuser
                     - testpass
+    testers:
+        strict: true
