Added logging to feature tests

--- a/tests/behat.yml.dist
+++ b/tests/behat.yml.dist
@@ -9,5 +9,6 @@ default:
                     - precise32
                     - testuser
                     - testpass
+                    - %paths.base%/log/features/
     testers:
         strict: true
