--- a/.travis.yml
+++ b/.travis.yml
@@ -20,12 +20,15 @@ before_script:
 
 script:
     - ./vendor/bin/phpunit -c tests --coverage-clover=build/logs/clover.xml
-    - ./vendor/bin/behat -c tests/behat.yml
+    - ./vendor/bin/behat -c tests/behat.yml -f progress
 
 after_script:
     - wget https://scrutinizer-ci.com/ocular.phar
     - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
     - php vendor/bin/coveralls -v
+    
+after_failure:
+    - cat tests/log/features/behat.*.log
 
 matrix:
     fast_finish: true
