--- a/composer.json
+++ b/composer.json
@@ -34,12 +34,12 @@
         }
     },
     "require": {
-        "php": ">=5.3.0",
-        "behat/behat": "~3.0"
+        "php": ">=5.3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.4",
-        "satooshi/php-coveralls": "~0.6"
+        "satooshi/php-coveralls": "~0.6",
+        "behat/behat": "~3.0"
     },
     "extra": {
         "branch-alias": {
