--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ php:
     - 5.6
     - hhvm
 
+addons:
+  code_climate:
+    repo_token: 5619fc9386e65aaf3b57e6978ea07726cbd3bd0ed9198e0811b1248ef371e959
+
 before_install:
     - echo $HOSTNAME
 
@@ -27,7 +31,8 @@ after_script:
     - wget https://scrutinizer-ci.com/ocular.phar
     - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
     - php vendor/bin/coveralls -v
-    
+    - php vendor/bin/test-reporter
+
 after_failure:
     - cat tests/log/features/behat.*.log
 
