--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
     "require-dev": {
         "phpunit/phpunit": "~4.4",
         "satooshi/php-coveralls": "~0.6",
-        "behat/behat": "~3.0"
+        "behat/behat": "~3.0",
+        "codeclimate/php-test-reporter": "@dev"
     },
     "extra": {
         "branch-alias": {
