--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,8 @@ after_script:
     - wget https://scrutinizer-ci.com/ocular.phar
     - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
     - php vendor/bin/coveralls -v
-    - php vendor/bin/test-reporter
+    - php vendor/bin/test-reporter --stdout > codeclimate.json
+    - curl -X POST -d @codeclimate.json -H "Content-Type: application/json" -H "User-Agent: Code Climate (PHP Test Reporter v0.1.1)" https://codeclimate.com/test_reports
 
 after_failure:
     - cat tests/log/features/behat.*.log
