--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ after_script:
     - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
     - php vendor/bin/coveralls -v
     - php vendor/bin/test-reporter --stdout > codeclimate.json
-    - curl -X POST -d @codeclimate.json -H "Content-Type: application/json" -H "User-Agent: Code Climate (PHP Test Reporter v0.1.1)" https://codeclimate.com/test_reports
+    - ./tests/upload_codeclimate.sh
 
 after_failure:
     - cat tests/log/features/behat.*.log
