--- a/composer.json
+++ b/composer.json
@@ -37,10 +37,11 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.4",
-        "satooshi/php-coveralls": "~0.6",
-        "behat/behat": "~3.0",
-        "codeclimate/php-test-reporter": "@dev"
+        "phpunit/phpunit": "^4.8",
+        "satooshi/php-coveralls": "^0.6.1",
+        "behat/behat": "^3.0",
+        "codeclimate/php-test-reporter": "@dev",
+        "phpunit/php-invoker": "^1.1"
     },
     "extra": {
         "branch-alias": {
