--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,10 @@ php:
     - 5.4
     - 5.5
     - 5.6
-    - 7
-    - hhvm
+    - 7.1
+    - 7.2
+    - 7.3
+    - master
 
 addons:
   code_climate:
