--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 language: php
 
 php:
-    - 5.3.3
-    - 5.3
     - 5.4
     - 5.5
     - 5.6
     - 7.1
     - 7.2
-    - 7.3
     - master
 
 addons:
@@ -21,7 +18,7 @@ before_install:
     - echo $IS_HHVM
 
 install:
-    - composer install --dev --no-interaction
+    - composer update --no-interaction --no-suggest
     - sudo ./tests/provisioner/install_ejabberd.sh testuser testpass
     - sudo ./tests/provisioner/install_dovecot.sh testuser testpass
 
@@ -29,7 +26,7 @@ before_script:
     - cat tests/behat.yml.dist | sed "s/precise32/$HOSTNAME/" > tests/behat.yml
 
 script:
-    - ./vendor/bin/phpunit -c tests --coverage-clover=build/logs/clover.xml
+    - ./vendor/bin/phpunit --coverage-clover=build/logs/clover.xml
     - ./vendor/bin/behat -c tests/behat.yml -f progress
 
 after_script:
