--- a/composer.json
+++ b/composer.json
@@ -34,10 +34,10 @@
         }
     },
     "require": {
-        "php": ">=5.3.0"
+        "php": "^5.3.0 || ^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
+        "phpunit/phpunit": "^4.8 || ^5.0",
         "satooshi/php-coveralls": "^0.6.1",
         "behat/behat": "^3.0",
         "codeclimate/php-test-reporter": "@dev",
