--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@
 .travis.yml export-ignore
 /tests export-ignore
 /Vagrantfile export-ignore
+phpunit.xml.dist export-ignore
+behat.yml export-ignore
