--- a/behat.yml
+++ b/behat.yml
@@ -1,7 +1,7 @@
 default:
     suites:
         authentication_features:
-            paths: [ %paths.base%/features/ ]
+            paths: [ %paths.base%/tests/features/ ]
             contexts:
                 - Fabiang\Sasl\Behat\XmppContext:
                     - localhost
