--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_script:
 
 script:
     - ./vendor/bin/phpunit --coverage-clover=build/logs/clover.xml --verbose
-    - ./vendor/bin/behat -c tests/behat.yml -f progress
+    - ./vendor/bin/behat -f progress
 
 after_script:
     - ./tests/upload_artefacts.sh
