Make provisioning work under xenial

--- a/behat.yml
+++ b/behat.yml
@@ -6,15 +6,15 @@ default:
                 - Fabiang\Sasl\Behat\XmppContext:
                     - localhost
                     - 15222
-                    - precise32
+                    - ubuntu-xenial
                     - testuser
                     - testpass
-                    - "%paths.base%/log/features/"
+                    - "%paths.base%/tests/log/features/"
                 - Fabiang\Sasl\Behat\Pop3Context:
                     - localhost
                     - 11110
                     - testuser
                     - testpass
-                    - "%paths.base%/log/features/"
+                    - "%paths.base%/tests/log/features/"
     testers:
         strict: true
